fix reaction menu in mini chat being behind chat

--- a/src/reels.css
+++ b/src/reels.css
@@ -149,6 +149,6 @@
 }
 
 /*fix the volume bar not being clickable*/
-.x1ja2u2z {
+.x1ja2u2z:has(video) {
     z-index: unset !important;
 }
